; ModuleID = '/home/carl/AnghaBench/openssl/crypto/asn1/extr_tasn_prn.c_ASN1_PCTX_new.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/asn1/extr_tasn_prn.c_ASN1_PCTX_new.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ASN1_F_ASN1_PCTX_NEW = common dso_local global i32 0, align 4
@ERR_R_MALLOC_FAILURE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @ASN1_PCTX_new() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca i32*, align 8
  %3 = call i32* @OPENSSL_zalloc(i32 4)
  store i32* %3, i32** %2, align 8
  %4 = load i32*, i32** %2, align 8
  %5 = icmp eq i32* %4, null
  br i1 %5, label %6, label %10

6:                                                ; preds = %0
  %7 = load i32, i32* @ASN1_F_ASN1_PCTX_NEW, align 4
  %8 = load i32, i32* @ERR_R_MALLOC_FAILURE, align 4
  %9 = call i32 @ASN1err(i32 %7, i32 %8)
  store i32* null, i32** %1, align 8
  br label %12

10:                                               ; preds = %0
  %11 = load i32*, i32** %2, align 8
  store i32* %11, i32** %1, align 8
  br label %12

12:                                               ; preds = %10, %6
  %13 = load i32*, i32** %1, align 8
  ret i32* %13
}

declare dso_local i32* @OPENSSL_zalloc(i32) #1

declare dso_local i32 @ASN1err(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
